# OrcaLab

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PACKAGING_SETUP.md  PERFORMANCE_OPTIMIZATION_README.md  README.md  orca.config.toml  pyproject.toml  run.py  test_detailed_cleanup.py  test_executable_cleanup.py
Docs/: DEVELOPMENT_FAQ.md  DEVELOPMENT_INSTALLATION.md  mouse_and_keyboard.md  multi_selection.md
Docs/api_detail/: INDEX.md  actor_design.md  crud_operations.md  event_bus.md  font_system_design.md  metadata_api.md
Docs/technical_design/: actor_outline_architecture.md  scene_layout_overview.md
orcalab/: __main__.py  actor.py  actor_property.py  actor_util.py  application_bus.py  asset_service.py  asset_service_bus.py  asset_sync_service.py  asset_sync_ui.py  auth_service.py  bootstrap.py  camera_data_png_result.py  cli_options.py  config_service.py  entity_info.py  entity_path.py  event_bus.py  exception.py  gpu_driver_check.py  i18n.py  launcher.py  level_discovery.py  local_scene.py  logging_util.py  main.py  math.py  metadata_service.py  metadata_service_bus.py  orca.config.platform_linux.toml  orca.config.platform_win32.toml  orca.config.toml  orca.config.user.toml.example  orca_uri.py  patch_pyside6.py  path.py  perf_log.py  physical_material.py  post_process_dispatcher.py  process_guard.py  project_util.py  (+15 more)
orcalab/assets/: assets.qrc  rc_assets.py
orcalab/copilot/: service.py
orcalab/http_service/: http_bus.py  http_service.py
orcalab/mcp_service/: mcp_client.py  (+1 more)
test/: test_agents_md.py  test_ruff_config.py
(+167 files in other folders)
